welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:5: error: not found: value PrendBiscuit
		PrendBiscuit();
                ^Balin:11: error: not found: value PoseBiscuit
		PoseBiscuit()
                ^